--- a/pom.xml
+++ b/pom.xml
@@ -5,27 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.4</version>
+		<version>3.1.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.alura</groupId>
-	<artifactId>ScreenMatch</artifactId>
+	<artifactId>screenmatch</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ScreenMatch</name>
-	<description>Spring sem web</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+	<name>screenmatch</name>
+	<description>Primeiro projeto Spring sem web</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -44,9 +31,8 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.17.2</version>
+			<version>2.15.2</version>
 		</dependency>
-
 
 	</dependencies>
 
