--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/Study
+spring.datasource.username=postgres
+spring.datasource.password=23012003
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.dialect=org.hibernate.dialect.HSQLDialect
